k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api
  namespace: hello-api
spec:
  type: ClusterIP
  selector:
    app: hello-api
  ports:
    - port: 80
      targetPort: 5000
