k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-api
  namespace: hello-api
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - "*.matheusrivello.me"
    secretName: matheusrivello-domain-secret
  rules:
  - host: helloapi.matheusrivello.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-api
            port:
              number: 80
